--- a/README.rdoc
+++ b/README.rdoc
@@ -40,7 +40,7 @@ Put +:not+ as the first parameter of +where+ method.
 * method
 Use the special method named +where_not+.
 
-    User.where_not(:not, :name => 'foo')
+    User.where_not(:name => 'foo')
      => SELECT "users".* FROM "users" WHERE ("users"."name" != 'foo')
 
 See specs for more details.
